--- a/src/components/page/header/index.less
+++ b/src/components/page/header/index.less
@@ -1,6 +1,6 @@
 .page-header{
   background: @base-bg-color;
-  padding: 16px 24px;
+  padding: 16px 24px 0;
   &.head.fixed{
     margin: auto;
     max-width: 1400px;
