--- a/src/components/page/header/index.less
+++ b/src/components/page/header/index.less
@@ -1,15 +1,15 @@
-.page-header{
+.page-header {
   background: @base-bg-color;
   padding: 16px 24px 0;
-  &.head.fixed{
+  &.head.fixed {
     margin: auto;
     max-width: 1400px;
   }
-  .page-header-wide{
-    .breadcrumb{
+  .page-header-wide {
+    .breadcrumb {
       margin-bottom: 20px;
     }
-    .detail{
+    .detail {
       display: flex;
       .row {
         display: flex;
@@ -17,21 +17,34 @@
         justify-content: space-between;
       }
       .avatar {
-        margin:0 24px 0 0;
+        margin: 0 24px 0 0;
       }
-      .main{
+      .main {
         width: 100%;
-        .title{
+        .row-back-title {
+          display: flex;
+          align-items: center;
+          font-weight: bold;
+          margin-bottom: 15px;
+          i {
+            font-size: 22px;
+            margin-right: 20px;
+          }
+          h1 {
+            margin: 0;
+          }
+        }
+        .title {
           font-size: 20px;
           color: @title-color;
           margin-bottom: 16px;
         }
-        .content{
+        .content {
           display: flex;
           flex-wrap: wrap;
           color: @text-color-second;
         }
-        .extra{
+        .extra {
           display: flex;
         }
       }
