--- a/src/global.less
+++ b/src/global.less
@@ -33,7 +33,7 @@
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  li:first-child {
+  &>li:first-child {
     position: absolute;
     left: 0;
   }
