--- a/src/layouts/header/index.less
+++ b/src/layouts/header/index.less
@@ -11,7 +11,8 @@
     box-shadow: none;
   }
   &.dark{
-    background: @header-bg-color-dark;
+    // background: @header-bg-color-dark;
+    background: #2d4152;
     color: white;
   }
   &.night{
